Added the styles for the third section

--- a/css/card.css
+++ b/css/card.css
@@ -20,7 +20,7 @@
   font-weight: bold;
 }
 .cards-container-title {
-  text-align: center;
+  align-self: start;
 }
 .card-header,
 .card-description {
