--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,12 @@ section {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  gap: 32px;
 }
 .first-section {
   justify-content: center;
 }
+
 .main-nav {
   position: fixed;
   min-height: auto;
@@ -49,6 +51,46 @@ section {
   padding: 0 15vw;
 }
 
+.personal-info {
+  padding: 0 10vw;
+}
+.contact-info {
+  align-self: flex-start;
+}
+#contact-me {
+  flex-grow: 1;
+  display: flex;
+  padding: 0 10vw;
+  justify-content: space-between;
+  align-items: center;
+}
+p {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.contact-icons {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.contact-icons > div {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.icon-paragraph {
+  margin: 0;
+}
+.personal-links {
+  display: flex;
+  gap: 16px;
+}
+.personal-link {
+  text-decoration: none;
+  color: var(--light-green);
+}
 /* ------------------------- Animation for the title ------------------------ */
 
 .introduction,
@@ -57,9 +99,9 @@ section {
   filter: blur(5px);
   font-size: 3vw;
   user-select: none;
-  transition: text-shadow, 2s, ease-out, 1s;
   transition: all 2s;
-  animation: introAnimation 1s ease-out 1s 1 forwards;
+  animation: introAnimation 1s ease-out 2s 1 forwards,
+    lightAnimation 3s ease-out 2s 1;
 }
 .introduction {
   transform: translateX(-100%);
@@ -75,6 +117,19 @@ section {
     filter: blur(0);
     opacity: 1;
     transform: translateX(0);
+  }
+}
+@keyframes lightAnimation {
+  0% {
+    text-shadow: 0 0 6px #cec9c9, 0 0 20px rgba(206, 201, 201, 0.42);
+  }
+
+  30% {
+    text-shadow: 0 0 6px #cec9c9, 0 0 20px rgba(206, 201, 201, 0.7);
+  }
+
+  100% {
+    text-shadow: 0 0 6px #cec9c9, 0 0 20px rgba(206, 201, 201, 1);
   }
 }
 
