--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,11 @@ html {
   margin: 0;
   padding: 0;
   min-height: 100%;
-  height: 100%;
+  min-width: 100%;
+  height: 100;
   box-sizing: border-box;
-  background: url('../images/dark-background-1920w.webp') no-repeat center
-    center fixed;
+  background: url('../images/dark-background-1920w.webp') no-repeat;
+  background-size: 100% 100%;
   font-family: var(--poiret), 'Times new Roman';
 }
 
@@ -157,36 +158,4 @@ p {
 .personal-photo {
   user-select: none;
   filter: brightness(50%);
-}
-
-@media (max-width: 480px) {
-  html {
-    background: url('../images/dark-background-480w.webp') no-repeat cover cover
-      fixed;
-  }
-  nav {
-    flex-direction: column;
-    padding: 0 12px;
-  }
-  .navbar-header {
-    display: flex;
-  }
-  .nav-links {
-    height: 0;
-    transform: scaleY(0);
-    flex-direction: column;
-    gap: 1rem;
-    text-align: center;
-    padding: 0;
-  }
-
-  .nav-links.active {
-    height: auto;
-    display: flex;
-    transform: scaleY(1);
-  }
-
-  .navbar-icon {
-    display: block;
-  }
 }
