--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Poiret+One&display=swap');
+* {
+  box-sizing: border-box;
+}
 :root {
   --dark-gold-rose: #643b47;
   --light-silver: #b9b9b9;
@@ -48,20 +51,11 @@
   border-radius: 12px;
 }
 
-/* ------------------------------ mobile navbar ------------------------------ */
+.navbar-icon {
+  display: none;
+}
 
 #arrow-btn {
   background: transparent;
-}
-
-.arrow {
-  transition: transform, 2s, ease-out, 1s;
-}
-
-.arrow.active {
-  transform: rotateX(180deg);
-}
-
-.navbar-icon {
-  display: none;
+  border: none;
 }
