--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,9 @@ html {
   min-width: 100%;
   height: 100;
   box-sizing: border-box;
-  background: url('../images/dark-background-1920w.webp') no-repeat;
-  background-size: 100% 100%;
+  background: url('../images/dark-background-1920w.webp') no-repeat center
+    center fixed;
+  background-size: cover;
   font-family: var(--poiret), 'Times new Roman';
 }
 
@@ -28,10 +29,10 @@ section {
 
 .main-nav {
   position: fixed;
-  min-height: auto;
   z-index: 10;
   top: 0;
-  min-width: calc(100% - 10rem);
+  min-width: 100%;
+  max-width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
