Added pulse animation, animation added for contact-me

--- a/css/main.css
+++ b/css/main.css
@@ -125,11 +125,64 @@ p {
   color: var(--light-green);
   font-size: 2vw;
 }
+
+.contact-info.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transition: all 1s;
+}
+.contact-info.show {
+  opacity: 1;
+  filter: blur(0);
+}
+
+.contact-info.show .second-animation,
+.contact-info.show h1,
+.contact-info.show .contact-icons,
+.contact-info.show .personal-links {
+  opacity: 0;
+  filter: blur(5px);
+}
+.contact-info.show h1,
+.contact-info.show .second-animation {
+  animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.contact-info.show .contact-icons {
+  animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.contact-info.show .personal-links {
+  animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+@keyframes fade-in {
+  100% {
+    opacity: 1;
+    filter: blur(0);
+  }
+}
 .introduction.show,
 .greeting.show {
   filter: blur(0);
   opacity: 1;
   transform: translateX(0);
+  text-shadow: 2px 2px 10px var(--light-silver);
+  animation: flicker 1s ease-in-out infinite alternate;
+}
+
+@keyframes flicker {
+  0% {
+    filter: drop-shadow(0 0 0 rgba(206, 201, 201, 0.7));
+  }
+
+  70% {
+    filter: drop-shadow(0 0 10px rgba(206, 201, 201, 0));
+  }
+
+  100% {
+    filter: drop-shadow(0 0 0 rgba(206, 201, 201, 0));
+  }
 }
 @media (prefers-reduced-motion) {
   .hidden {
