--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@ html {
   padding: 0;
   min-height: 100%;
   min-width: 100%;
-  height: 100;
   box-sizing: border-box;
   background: url('../images/dark-background-1920w.webp') no-repeat center
     center fixed;
@@ -60,6 +59,7 @@ section {
 #contact-me {
   flex-grow: 1;
   display: flex;
+  gap: 8px;
   padding: 0 10vw;
   justify-content: space-between;
   align-items: center;
