--- a/css/card.css
+++ b/css/card.css
@@ -34,6 +34,15 @@
   justify-content: space-between;
 }
 
+.card.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transition: all 1s;
+}
+.card.show {
+  opacity: 1;
+  filter: blur(0);
+}
 .card-links {
   display: flex;
   list-style: none;
